feat: bulk text estimate fee
