# swagger.yaml
@@ -183,6 +183,30 @@ paths:
             application/json:
               schema:
                 type: string
+  /estimate/bulk-text-estimate-fee:
+    post:
+      summary: Bulk Text Fee Estimate.
+      tags:
+        - Fee-Estimate
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/BulkTextEstimateFee"
+      responses:
+        "200":
+          description: Bulk Text Fee Estimage Success!
+          content:
+            application/json:
+              schema:
+                type: string
+        "400":
+          description: Bulk Text Fee Estimage Failed!
+          content:
+            application/json:
+              schema:
+                type: string
   /estimate/file-estimate-fee:
     post:
       summary: File Inscription Fee Estimate
@@ -399,6 +423,23 @@ components:
         - content
         - feeRate
         - padding
+    BulkTextEstimateFee:
+      type: object
+      properties:
+        contents:
+          type: string
+          example: '{ "data": ["360bitmap", "361bitmap.362bitmap", "361bitmap.362bitmap361bitmap", "361bitmap.362bitmap361bitmap.362bitmap"] }'
+        feeRate:
+          type: number
+          example: 50
+        padding:
+          type: number
+          example: 546
+      required:
+        - content
+        - feeRate
+        - padding
+  
     FileEstimateFee:
       type: object
       properties:
